--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="color-scheme" content="light" />
 <title>Cooler Topper AR</title>
 <style>
   body {
     margin: 0;
     font-family: sans-serif;
-    background: #fff;
+    background: #f9f9f9;
     text-align: center;
     padding: 50px 0;
-    color: #000; /* ensure text is dark */
   }
   h1, footer {
     position: fixed;
@@ -27,13 +27,16 @@
     padding: 10px;
     font-size: 1.4rem;
   }
-  #ar-button img {
+  #ar-button {
+    margin: 100px auto 20px;
     max-width: 600px;
     width: 100vw;
-    margin: 40px auto 20px;
-    display: block;
+  }
+  #ar-button img {
+    width: 100%;
     cursor: pointer;
     transition: transform 0.2s;
+    display: block;
   }
   #ar-button img:hover {
     transform: scale(1.05);
@@ -56,16 +59,53 @@
   footer img {
     height: 20px;
   }
-
-  /* Force light mode background and text colors even if system prefers dark mode */
-  @media (prefers-color-scheme: dark) {
-    body {
-      background: #fff !important;
-      color: #000 !important;
-    }
-    .fallback {
-      color: #666 !important;
-    }
+  button#desktop-fallback {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    background: #E10600;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: not-allowed;
+    opacity: 0.6;
   }
 </style>
 </head>
+<body>
+
+<h1>FLM Cooler Topper</h1>
+<div id="ar-button"></div>
+<div class="fallback" id="fallback"></div>
+
+<footer>
+  <img src="dq_logo.png" alt="Company Logo" />
+  <div>© 2025 Display Quest. All rights reserved.</div>
+</footer>
+
+<script>
+  const ua = navigator.userAgent;
+  const btnContainer = document.getElementById("ar-button");
+  const fallbackMsg = document.getElementById("fallback");
+
+  if (/iPhone|iPad|iPod/i.test(ua)) {
+    btnContainer.innerHTML = `
+      <a rel="ar" href="AR_DQ2049.usdz" aria-label="View Cooler Topper in Augmented Reality on iOS">
+        <img src="CoolerTopper.png" alt="View in AR" loading="eager" />
+      </a>
+    `;
+  } else if (/Android/i.test(ua)) {
+    btnContainer.innerHTML = `
+      <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;" 
+         aria-label="View Cooler Topper in Augmented Reality on Android">
+        <img src="CoolerTopper.png" alt="View in AR" loading="eager" />
+      </a>
+    `;
+  } else {
+    fallbackMsg.textContent = "AR is only supported on iOS and Android devices.";
+    btnContainer.innerHTML = `<button id="desktop-fallback" disabled>AR Not Available</button>`;
+  }
+</script>
+
+</body>
+</html>
