--- a/index.html
+++ b/index.html
@@ -1,110 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Cooler Topper AR</title>
-<style>
-  body {
-    margin: 0;
-    font-family: sans-serif;
-    background: #f9f9f9;
-    text-align: center;
-    padding: 50px 0;
-  }
-  h1, footer {
-    position: fixed;
-    width: 100%;
-    left: 0;
-    z-index: 1000;
-    box-sizing: border-box;
-  }
-  h1 {
-    top: 0;
-    background: #E10600;
-    color: #fff;
-    margin: 0;
-    padding: 10px;
-    font-size: 1.4rem;
-  }
-  #ar-button {
-    margin: 100px auto 20px;
-    max-width: 600px;
-    width: 100vw;
-  }
-  #ar-button img {
-    width: 100%;
-    cursor: pointer;
-    transition: transform 0.2s;
-    display: block;
-  }
-  #ar-button img:hover {
-    transform: scale(1.05);
-  }
-  .fallback {
-    color: #666;
-    font-size: 0.9rem;
-    margin-top: 10px;
-  }
-  footer {
-    bottom: 0;
-    background: #000;
-    color: #fff;
-    padding: 6px 12px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 0.7rem;
-  }
-  footer img {
-    height: 20px;
-  }
-  button#desktop-fallback {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 1rem;
-    background: #E10600;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: not-allowed;
-    opacity: 0.6;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>FLM Cooler Topper AR</title>
+  <meta name="description" content="View the FLM Cooler Topper in AR on your mobile device." />
+  <meta name="theme-color" content="#E10600" />
+
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background: #f9f9f9;
+      text-align: center;
+      padding: 50px 0;
+    }
+    h1, footer {
+      position: fixed;
+      width: 100%;
+      left: 0;
+      box-sizing: border-box;
+      z-index: 1000;
+    }
+    h1 {
+      top: 0;
+      background: #E10600;
+      color: #fff;
+      margin: 0;
+      padding: 10px;
+      font-size: 1.4rem;
+    }
+    #ar-button {
+      margin: 100px auto 20px;
+      max-width: 600px;
+      width: 100vw;
+    }
+    #ar-button img {
+      width: 100%;
+      cursor: pointer;
+      transition: transform 0.2s;
+      display: block;
+    }
+    #ar-button img:hover {
+      transform: scale(1.05);
+    }
+    .fallback {
+      color: #666;
+      font-size: 0.9rem;
+      margin-top: 10px;
+    }
+    footer {
+      bottom: 0;
+      background: #000;
+      color: #fff;
+      padding: 6px 12px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 0.7rem;
+    }
+    footer img {
+      height: 20px;
+    }
+    .disabled-btn {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      background: #E10600;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: not-allowed;
+      opacity: 0.6;
+    }
+  </style>
 </head>
 <body>
 
 <h1>FLM Cooler Topper</h1>
-<div id="ar-button"></div>
+
+<div id="ar-button" role="region" aria-label="AR Launch Button"></div>
 <div class="fallback" id="fallback"></div>
 
 <footer>
-  <img src="dq_logo.png" alt="Company Logo" />
+  <img src="dq_logo.png" alt="Company Logo" loading="lazy" />
   <div>© 2025 Display Quest. All rights reserved.</div>
 </footer>
 
 <script>
-  const ua = navigator.userAgent;
-  const btnContainer = document.getElementById("ar-button");
-  const fallbackMsg = document.getElementById("fallback");
+  (function () {
+    const arButton = document.getElementById('ar-button');
+    const fallback = document.getElementById('fallback');
+    const imgSrc = 'CoolerTopper.png';
+    const usdzFile = 'AR_DQ2049.usdz';
+    const glbFile = 'https://creative-ww.github.io/artest/AR_DQ2049.glb';
 
-  if (/iPhone|iPad|iPod/i.test(ua)) {
-    btnContainer.innerHTML = `
-      <a rel="ar" href="AR_DQ2049.usdz" aria-label="View Cooler Topper in Augmented Reality on iOS">
-        <img src="CoolerTopper.png" alt="View in AR" loading="eager" />
-      </a>
-    `;
-  } else if (/Android/i.test(ua)) {
-    btnContainer.innerHTML = `
-      <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;" 
-         aria-label="View Cooler Topper in Augmented Reality on Android">
-        <img src="CoolerTopper.png" alt="View in AR" loading="eager" />
-      </a>
-    `;
-  } else {
-    fallbackMsg.textContent = "AR is only supported on iOS and Android devices.";
-    btnContainer.innerHTML = `<button id="desktop-fallback" disabled>AR Not Available</button>`;
-  }
+    const isiOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
+    const isAndroid = /Android/i.test(navigator.userAgent);
+
+    if (isiOS) {
+      arButton.innerHTML = `
+        <a rel="ar" href="${usdzFile}" aria-label="View Cooler Topper in AR on iOS">
+          <img src="${imgSrc}" alt="View in AR" loading="eager" />
+        </a>
+      `;
+    } else if (isAndroid) {
+      const intentUrl = `intent://arvr.google.com/scene-viewer/1.0?file=${encodeURIComponent(glbFile)}&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;`;
+      arButton.innerHTML = `
+        <a href="${intentUrl}" aria-label="View Cooler Topper in AR on Android">
+          <img src="${imgSrc}" alt="View in AR" loading="eager" />
+        </a>
+      `;
+    } else {
+      fallback.textContent = 'AR is only supported on iOS and Android devices.';
+      arButton.innerHTML = `<button class="disabled-btn" disabled>AR Not Available</button>`;
+    }
+  })();
 </script>
 
 </body>
