--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       `;
     } else {
       fallback.textContent = 'AR is only supported on iOS and Android devices.';
-      arButton.innerHTML = `<button class="disabled-btn" disabled>AR Not Supported</button>`;
+      arButton.innerHTML = `<button class="disabled-btn" disabled>AR Not Available</button>`;
     }
   })();
 </script>
